@@ -2444,10 +2444,6 @@ http/tests/inspector/resource-tree/resource-tree-document-url.html
 http/tests/inspector/resource-tree/resource-tree-frame-navigate.html
 http/tests/inspector/resource-tree/resource-tree-non-unique-url.html
 
-# [Qt] fast/events/media-focus-in-standalone-media-document.html fails
-# https://bugs.webkit.org/show_bug.cgi?id=70110
-fast/events/media-focus-in-standalone-media-document.html
-
 # inspector/cookie-parser.html is a flaky crash
 # https://bugs.webkit.org/show_bug.cgi?id=62662
 inspector/cookie-parser.html
