@@ -50,6 +50,18 @@ static const ExtensionMap extensionMap[] = {
     { "jpg", "image/jpeg" },
     { "js", "application/x-javascript" },
     { "mng", "video/x-mng" },
+    { "mp4", "video/mp4" },
+    { "m4v", "video/mp4" },
+    { "m4a", "audio/x-m4a" },
+    { "mp3", "audio/mp3" },
+    { "ogv", "video/ogg" },
+    { "oga", "audio/ogg" },
+    { "ogm", "audio/ogg" },
+    { "ogg", "audio/ogg" },
+    { "webm", "video/webm" },
+    { "webm", "audio/webm" },
+    { "wav", "audio/wav" },
+    { "mov", "video/quicktime" },
     { "pbm", "image/x-portable-bitmap" },
     { "pgm", "image/x-portable-graymap" },
     { "pdf", "application/pdf" },
