@@ -661,6 +661,9 @@ bool FrameLoaderClientQt::canShowMIMEType(const String& MIMEType) const
     if (MIMETypeRegistry::isSupportedNonImageMIMEType(type))
         return true;
 
+    if (MIMETypeRegistry::isSupportedMediaMIMEType(type))
+        return true;
+
     if (m_frame && m_frame->settings()  && m_frame->settings()->arePluginsEnabled()
         && PluginDatabase::installedPlugins()->isMIMETypeRegistered(type))
         return true;
