@@ -1,3 +1,14 @@
+2011-10-24  Deepak Sherveghar  <bpwv64@motorola.com>
+
+        [Qt] fast/events/media-focus-in-standalone-media-document.html fails
+        https://bugs.webkit.org/show_bug.cgi?id=70110
+
+        Reviewed by Simon Hausmann.
+
+        Remove media-focus-in-standalone-media-document.html from Qt Skipped test list.
+
+        * platform/qt/Skipped:
+
 2011-10-24  Pavel Feldman  <pfeldman@chromium.org>
 
         Web Inspector: make view load CSS files upon show.
